# encapsulation_javasdk_from_ndk

./: README.md
app/: build.gradle
app/src/androidTest/java/com/ndk/sdkfromndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CVUtils.cpp  NativeMat.cpp  cv_helper.cpp  cv_helper.h  native-lib.cpp
app/src/main/java/com/ndk/opencv2/: CVType.java  CVUtils.java  Mat.java
app/src/main/java/com/ndk/sdkfromndk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ndk/sdkfromndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
